push latest changes so code isn't lost